--- a/src/components/common.css
+++ b/src/components/common.css
@@ -34,6 +34,9 @@ span.fa.fa-angle-down.super-crazy-colors {
 }
 span.ticketId {
     color: #858585;
+        font-size: 14px;
+    padding-top: 6px;
+    display: block;
 }
 span.ticketId b {
     color: #5f5e5e;
@@ -41,6 +44,9 @@ span.ticketId b {
 span.spanClr {
     padding-right: 15px;
     color: #858585;
+        font-size: 14px;
+    padding-top: 6px;
+    display: inline-block;
 }
 span.spanClr b {
     color: #5f5e5e;
